tests/baselines/reference/filterNamespace_import.errors.txt
/a.ts(2,1): error TS2708: Cannot use namespace 'ns' as a value.
/a.ts(3,1): error TS2708: Cannot use namespace 'ns' as a value.


==== /ns.ts (0 errors) ====
    namespace ns {
      export type Type = string;
      export class Class {}
      export const Value = "";
      export namespace nested {
        export class NestedClass {
          a!: string;
        }
      }
    }
    
    export default ns;
    
==== /a.ts (2 errors) ====
    import type ns from './ns';
    ns.Class; // Error
    ~~
!!! error TS2708: Cannot use namespace 'ns' as a value.
    ns.Value; // Error
    ~~
!!! error TS2708: Cannot use namespace 'ns' as a value.
    let c: ns.Class;
    let t: ns.Type = "";
    let n: ns.nested.NestedClass = { a: '' };
    